--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   background-color: #0066FF;
   color: white;
   align-items: center;
-  width: 500px;
+  width: 60%;
 }
 
 
@@ -49,7 +49,7 @@
   background-color: black;
   color: white;
   align-items: center;
-  width: 500px;
+  width: 60%;
 }
 
 .custom1-style {
